--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img class=""
             src="https://cdn.sistemawbuy.com.br/arquivos/2a3d63d2584e9ab8e8c02f1858ab5305/produtos/HEI2XU9/jogo-project-cars-3-xbox-one-25-da-gitos-618fbab4814e5.jpg"
             alt="jogo">
-        <span>Ou algum outro jogo da Loja!!</span>
+        <span>Ou qualquer outro jogo da Loja!!</span>
     </main>
 
     <script src="script.js"></script>
